feat: update RabbitMQ configuration and improve error logging

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ MINIO_SECRET_KEY=your_minio_secret_key
 MINIO_USE_SSL=true
 MINIO_BUCKET_NAME=your_bucket_name
 MINIO_BASE_URL=https://your_minio_base_url
+# RabbitMQ
+RABBITMQ_URL=amqp://user:password@localhost:5672/
