feat: update SSH port in deployment script and enhance health check for RabbitMQ connection

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,14 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -p 31086 -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -p 31080 -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
           
-          ssh -p 31086 -i ~/.ssh/id_ed25519 deploy@${{ secrets.VPS_HOST }} << 'EOF'
+          ssh -p 31080 -i ~/.ssh/id_ed25519 deploy@${{ secrets.VPS_HOST }} << 'EOF'
             docker login ghcr.io -u ${{ github.repository_owner }} -p '${{ secrets.GHCR_TOKEN }}'
             docker pull ghcr.io/${{ github.repository_owner }}/sse-gateway-coffe:latest
             docker stop sse-gateway-coffe || true && docker rm sse-gateway-coffe || true 
           
             docker run --env-file /home/deploy/env_project/coffe/sse_gateway/.env -d --name sse-gateway-coffe --network coffe-net -p 8003:8003 --memory="512m" --cpus="1.0" --restart=on-failure:5 ghcr.io/${{ github.repository_owner }}/sse-gateway-coffe:latest
+            cd kube_config/coffe
+            kubectl apply -f sse-gateway.yaml
           EOF
